objects/Facebook_Details__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Application_Id__c</fullName>
        <description>Facebook Application Id.</description>
        <label>Application Id</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facebook_Page_Id__c</fullName>
        <description>Facebook Page Id</description>
        <label>Facebook Page Id</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PageAccess_Token__c</fullName>
        <description>Page Access Token.</description>
        <label>PageAccess Token</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <label>Facebook Details</label>
</CustomObject>